Realizar la integración del Chatbot realizado en writesonic

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,8 @@
         </div>
     </footer>
 
-    <script src="js/index.js"></script>
-</body>
-</html>
+    <div class="fixed-bottom-right">
+        <a href="https://bot.writesonic.com/share/bot/80dc519b-909b-4e7f-9167-2a75b2b6e505" target="_blank">
+            <img src="assets/Chatbot.png" alt="Chatbot">
+        </a>
+    </div>
