--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
         </div>
     </footer>
 
-    <script>
+    <!-- <script>
         (function (w, d, s, o, f, js, fjs) {
           w["botsonic_widget"] = o;
           w[o] =
@@ -159,6 +159,6 @@
           serviceBaseUrl: "https://api-azure.botsonic.ai",
           token: "a57ffab7-633f-486b-8ac2-9e6074f9f8a6",
         });
-      </script>
+      </script> -->
 </body> 
 </html>  
