--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
     </footer>
 
     <!-- Añadir JavaScript -->
-    <script src="/src/js/index.js"></script>
+    <script src="./js/index.js"></script>
 
     <!-- <script>
         (function (w, d, s, o, f, js, fjs) {
